kubernetes/apps/network/echo/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`echo.f9.casa`)
      kind: Rule
      services:
        - name: echo
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
